--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     color: var(--soft-pink);
     font-family: 'Playfair Display', serif;
     line-height: 1.5; /* Espaçamento entre linhas para melhor legibilidade */
+	padding-bottom: 8%;
+	padding-top: 8%;
 }
 
 * {
@@ -42,7 +44,7 @@ body {
     background: rgba(47, 35, 37, 0.7); /* Fundo semi-transparente, a variável 0,7 define a opacidade */
     backdrop-filter: blur(70px); /* Efeito de desfoque para o fundo, a unidade px define a intensidade */
     border-bottom: 1px solid rgba(255, 242, 231, 0.3); /* Linha sutil na parte inferior do cabeçalho */
-    padding: 2% 4%; /* Espaçamento interno do cabeçalho */
+    padding: 2% 4%; /* Espaçamento interno do cabeçalho, 2% vertical e 4% horizontal */
 }
 
 /* Id do Logo, para estilização específica e sobrepor o estilo genérico do header */
