--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     font-family: 'Playfair Display', serif;
     line-height: 1.5; /* Espaçamento entre linhas para melhor legibilidade */
 	padding-bottom: 8%;
-	padding-top: 8%;
+	padding-top: 8rem;
 }
 
 * {
@@ -28,10 +28,6 @@ body {
 .section {
 	padding: 4% 2%; /* Espaçamento interno das seções */
 	margin-bottom: 4%; /* Espaçamento entre as seções */
-}
-
-#first-section {
-	margin-top: 8%; /* Espaçamento superior para a primeira seção */
 }
 
 /* Componentes Específicos */
@@ -78,8 +74,8 @@ body {
     background-color: var(--rust);
     color: var(--soft-pink);
 	text-decoration: none;
-    padding: 2%;
-    border-radius: 1rem;
+    padding: 0.5rem 1.5rem;
+    border-radius: 0.5rem;
     font-weight: bold;
 }
 
@@ -87,6 +83,41 @@ body {
 .btn-primary:hover {
 	background-color: var(--peach);
 	color: var(--rust);
+}
+
+/* Seção Sobre */
+
+.about-section {
+    margin-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
+
+.about-content {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 2rem;
+    width: 100%;
+}
+
+.about-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: flex-start;
+}
+
+/* Foto de Perfil */
+.about-section .profile-photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 5px solid var(--rust);
+  object-fit: cover;
+  margin-bottom: 0;
 }
 
 /* Grid de Projetos */
